--- a/README.adoc
+++ b/README.adoc
@@ -19,6 +19,10 @@ For the full documentation of the Guillotine project, visit the Enonic Developer
 |XP Version
 |Dependency
 
+|5.0.0
+|7.2.0
+|com.enonic.lib:lib-guillotine:5.0.0
+
 |4.2.0
 |7.2.0
 |com.enonic.lib:lib-guillotine:4.2.0
@@ -49,6 +53,22 @@ For the full documentation of the Guillotine project, visit the Enonic Developer
 |===
 
 == Breaking changes
+
+=== Breaking changes in 5.0
+
+- Type "Attachment" is returned instead of "String" for form-item with type "AttachmentUploader"
+- Type "Content" fields "dataAsJson" and "pageAsJson" return "JSON" instead of "String"
+- Fields "config" of the "PageComponentData", "LayoutComponentData" and "PartComponentData" types return "JSON" instead of "String"
+- Type "Subscription": Field "newEvent" renamed to "event". The "type" and "localOnly" arguments are removed
+- Type "UrlTypeType" renamed to "UrlType"
+- Type "HeadlessCms": Field "query" returns the "QueryResult" type instead of an array of the "Content" type
+- Type "HeadlessCms": Field "queryConnection" returns the "QueryContentConnection" type instead of an array of the "ContentConnection" type
+- Generation of field names for "OptionSet" and "ItemSet" types do not use camel-case anymore and were uniformed with the rest of field naming
+- Type "TextComponentData": Field "value" returns the "HtmlEditorResult" type instead of the "String" type and supports the `processHtml` argument with the "ProcessHtmlInput" type.
+- Form-item with type "HtmlArea" returns the "HtmlEditorResult" type instead of the "String" type
+- Form-item with type "Date" returns the "Date" scalar instead of the "String" type
+- Form-item with type "Time" returns the "LocalTime" scalar instead of the "String" type
+- Form-item with type "DateTime" returns the "DateTime" scalar instead of the "String" type if there is config with `timezone`, otherwise will be used the "LocalDateTime" scalar
 
 === Breaking changes in 4.0
 
