--- a/docs/advanced.adoc
+++ b/docs/advanced.adoc
@@ -28,14 +28,14 @@ exports.post = function (req) {
 
 function createSchema() {
     var context = guillotineLib.createContext(); <1>
-    return graphQlLib.createSchema({
+    return context.schemaGenerator.createSchema({
         query: createRootQueryType(context),
         dictionary: context.dictionary <2>
     });
 }
 
 function createRootQueryType(context) {
-    return graphQlLib.createObjectType({
+    return context.schemaGenerator.createObjectType({
         name: 'Query',
         fields: {
             guillotine: {
@@ -123,7 +123,7 @@ var schema = guillotineLib.createSchema({
 
 exports.post = function (req) {
     var body = JSON.parse(req.body);
-    var result = graphQlLib.execute(schema, body.query, body.variables);
+    var result = JSON.stringify(graphQlLib.execute(schema, body.query, body.variables));
     return {
         contentType: 'application/json',
         body: result
