Updated the breaking changes section of README

--- a/README.adoc
+++ b/README.adoc
@@ -55,20 +55,28 @@ For the full documentation of the Guillotine project, visit the Enonic Developer
 == Breaking changes
 
 === 5.0
+- Naming for component types like Part, Page and Layout was changed:
+
+from "<ComponentType>ComponentDataDescriptorConfig" to "<ComponentType>_<applicationKey>_<descriptorName>" and
+
+from "ComponentType>ComponentDataApplicationConfig" to "<ComponentType>_<applicationKey>_ComponentDataApplicationConfig"
 
 - Type "Attachment" is returned instead of "String" for a form item of type "AttachmentUploader"
 - Fields "dataAsJson" and "pageAsJson" of type "Content" return "JSON" instead of "String"
 - Fields "config" of "PageComponentData", "LayoutComponentData" and "PartComponentData" types return "JSON" instead of "String"
 - Type "Subscription": Field "newEvent" renamed to "event". The "type" and "localOnly" arguments are removed
 - Type "UrlTypeType" renamed to "UrlType"
-- Type "HeadlessCms": Field "query" returns "QueryResult" type instead of an array of "Content" type
-- Type "HeadlessCms": Field "queryConnection" returns "QueryContentConnection" type instead of an array of "ContentConnection" type
-- Generation of field names for "OptionSet" and "ItemSet" types do not use camel-case anymore and were uniformed with the rest of field naming
-- Type "TextComponentData": Field "value" returns "RichText" type instead of "String" and supports the `processHtml` argument of "ProcessHtmlInput" type.
-- A form item of type "HtmlArea" returns "RichText" type instead of "String"
+- Type "HeadlessCms": Field "query" returns type "QueryResult" instead of an array of type "Content".
+
+*NB! Make sure to wrap your query inside the "hits" field (<<docs/guillotine/stable/usage#using_the_api,see example>>)*
+
+- Type "HeadlessCms": Field "queryConnection" returns type "QueryContentConnection" instead of an array of type "ContentConnection"
+- Generation of field names for types "OptionSet" and "ItemSet" do not use camel-case anymore and were uniformed with the rest of field naming
+- Type "TextComponentData": Field "value" returns type "RichText" instead of "String" and supports the `processHtml` argument of type "ProcessHtmlInput".
+- A form item of type "HtmlArea" returns type "RichText" instead of "String"
 - A form item of type "Date" returns "Date" scalar instead of "String"
 - A form item of type "Time" returns "LocalTime" scalar instead of "String"
-- A form item of type "DateTime" returns "DateTime" scalar instead of "String" type if there is config with `timezone`, otherwise "LocalDateTime" scalar
+- A form item of type "DateTime" returns "DateTime" scalar instead of type "String" if there is A config with `timezone`, otherwise "LocalDateTime" scalar
 
 === 4.0
 
